--- a/app_server/views/layout.jade
+++ b/app_server/views/layout.jade
@@ -26,4 +26,4 @@ html
           .col-xs-12
             small &copy; Iryna Howarth 2016
     script(src='/javascripts/jquery-1.12.4.min.js')
-    script(src='bootstrap/js/bootstrap.min.js')
+    script(src='/bootstrap/js/bootstrap.min.js')
