extract data from views to controllers:   add Jade mixins for reusable code   change view templates   hold all data in controllers for future development

--- a/app_server/views/generic-text.jade
+++ b/app_server/views/generic-text.jade
@@ -7,7 +7,4 @@ block content
         h1= title
   .row
     .col-md-6.col-sm-12
-      p
-        | Loc8r was created to help people find places to sit down and get a bit of work done.
-        | <br /><br />
-        | Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium deserunt veniam iusto architecto, fugiat similique, nobis cumque illum enim facere vel laudantium saepe excepturi. Rem, nulla enim ex natus sed beatae. Totam placeat eos nulla quos voluptate et corporis modi similique aliquam eaque accusamus illum fugit voluptatibus consequatur mollitia corrupti explicabo neque, quo quisquam a sequi iure velit? Dolore suscipit natus et unde esse nulla officia distinctio ducimus, officiis obcaecati repellendus doloribus corporis minus nemo illo voluptas nesciunt aspernatur voluptate, dolorem! Saepe soluta consequuntur delectus voluptate quod cum mollitia, inventore repellat commodi, id aspernatur voluptatum molestias autem sit nisi tempora.
+      p !{content.replace(/\n/g, '<br/>')}
