--- a/app_server/views/locations-list.jade
+++ b/app_server/views/locations-list.jade
@@ -1,69 +1,30 @@
 extends layout
 
+include _includes/sharedHTMLfunctions
+
 block content
   #banner.page-header
     .row
-      .col-lg-6
-        h1 Loc8r
-          small &nbsp;Find places to work or study using wifi close to you!
+      .col-lg-12
+        h1= pageHeader.title
+          small &nbsp;#{pageHeader.strapline}
   .row
+
     .col-xs-12.col-sm-8
       .row.list-group
-        .col-xs-12.list-group-item
-          h4
-            a(href="/location") Costa Coffee
-            small &nbsp;
-              span.glyphicon.glyphicon-star
-              span.glyphicon.glyphicon-star
-              span.glyphicon.glyphicon-star
-              span.glyphicon.glyphicon-star
-              span.glyphicon.glyphicon-star-empty
-            span.badge.pull-right.badge-default 160m
-          p.address 4 Fairfax Rd, Manchester M25 1AY
-          p
-            span.label.label-warning Hot drinks
-            &nbsp;
-            span.label.label-warning Iced coolers
-            &nbsp;
-            span.label.label-warning Snacks/sandwiches
-            &nbsp;
-            span.label.label-warning Free Wifi
-            &nbsp;
-        .col-xs-12.list-group-item
-          h4
-            a(href="/location") Starbucks
-            small &nbsp;
-              span.glyphicon.glyphicon-star
-              span.glyphicon.glyphicon-star
-              span.glyphicon.glyphicon-star
-              span.glyphicon.glyphicon-star-empty
-              span.glyphicon.glyphicon-star-empty
-            span.badge.pull-right.badge-default 275m
-          p.address 1-3 Piccadilly, Manchester M1 3AQ
-          p
-            span.label.label-warning Hot drinks
-            &nbsp;
-            span.label.label-warning Snacks/sandwiches
-            &nbsp;
-            span.label.label-warning Free Wifi
-            &nbsp;
-        .col-xs-12.list-group-item
-          h4
-            a(href="/location") Greggs Plc
-            small &nbsp;
-              span.glyphicon.glyphicon-star
-              span.glyphicon.glyphicon-star
-              span.glyphicon.glyphicon-star-empty
-              span.glyphicon.glyphicon-star-empty
-              span.glyphicon.glyphicon-star-empty
-            span.badge.pull-right.badge-default 450m
-          p.address 9-10 Fairfax Rd, Prestwich, Manchester M25 1AY
-          p
-            span.label.label-warning Hot drinks
-            &nbsp;
-            span.label.label-warning Food
-            &nbsp;
-            span.label.label-warning Premium Wifi
-            &nbsp;
+        each location in locations
+          .col-xs-12.list-group-item
+            h4
+              a(href="/location")= location.name
+              small &nbsp;
+                +outputRating(location.rating)
+
+              span.badge.pull-right.badge-default= location.distance
+            p.address= location.address
+            p
+            each facility in location.facilities
+              span.label.label-warning= facility
+              &nbsp;
+
     .col-xs-12.col-sm-4
-      p.lead Loc8r helps you find places with wifi when you out and about.
+      p.lead= sidebar
